; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_main-src.c_is_my_ip.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_main-src.c_is_my_ip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Source = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_my_ip(%struct.Source* %0, i32 %1) #0 {
  %3 = alloca %struct.Source*, align 8
  %4 = alloca i32, align 4
  store %struct.Source* %0, %struct.Source** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.Source*, %struct.Source** %3, align 8
  %6 = getelementptr inbounds %struct.Source, %struct.Source* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ule i32 %8, %9
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.Source*, %struct.Source** %3, align 8
  %14 = getelementptr inbounds %struct.Source, %struct.Source* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = icmp ule i32 %12, %16
  br label %18

18:                                               ; preds = %11, %2
  %19 = phi i1 [ false, %2 ], [ %17, %11 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
